# canoe_robot_py_automation

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/fixtures/: uds_mock_responses.json
documents/: Folder_Structure.md  Getting_Started.md  Live_Bench_Usage.md  Test_Authoring_Guide.md
libraries/: __init__.py
libraries/base/: __init__.py  canoe_client.py  live_preflight.py  transport_interface.py
libraries/diagnostics/: __init__.py  diag_keyword_library.py  diagnostics_cli.py  uds_can.py  uds_core.py  uds_doip.py  uds_mock.py
libraries/software_update/: __init__.py  flash_can.py  flash_core.py  flash_keyword_library.py
resources/keywords/: assertion_keywords.robot  diag_keywords.robot  flash_keywords.robot
resources/variables/: env.robot  ids.robot
scripts/: __init__.py  ids_profile_apply.py  ids_template.bat  ids_template.ps1  live_env_template.bat  live_env_template.ps1  live_gate.bat  live_gate.ps1  live_gate.py
scripts/ids_profiles/: can_bench_a.json  doip_bench_b.json
tests/diagnostics/negative/: can_diag_negative.robot
tests/diagnostics/positive/: can_diag_positive.robot
tests/flashing/negative/: can_flash_negative.robot
tests/flashing/positive/: can_flash_positive.robot
tests/smoke/: test_phase1_self_audit.py  test_phase2_hardening.py  test_phase3_transport_adapters.py  test_phase4_flashing_engine.py  test_phase5_robot_abstraction.py  test_smoke_flashing_engine.py  test_smoke_hardening.py  test_smoke_mock_contracts.py  test_smoke_robot_abstraction.py  test_smoke_transport_adapters.py  test_wait_semantics.py
